==> SongHanSol1140/Arduino/Example/PIM517_I2C_Expander/IOExpander.cpp <==
#include "IOExpander.h"

uint16_t IOExpander::getChipId(void)
{
  //Get the IOE chip ID.
  return ((uint16_t)i2cRead8(REG_CHIP_ID_H) << 8) | (uint16_t)i2cRead8(REG_CHIP_ID_L);
}

void IOExpander::enableInterruptOut(bool pinSwap)
{
  //Enable the IOE interrupts.
  setBit(REG_INT, BIT_INT_OUT_EN);
  changeBit(REG_INT, BIT_INT_PIN_SWAP, pinSwap);
}

void IOExpander::disableInterruptOut(void)
{
  //Disable the IOE interrupt output.
  clrBit(REG_INT, BIT_INT_OUT_EN);
}

bool IOExpander::setPinInterrupt(uint8_t pin, bool enabled)
{
  //Enable/disable the input interrupt on a specific pin.

  //param pin: Pin from 1-14
  //param enabled: True/False for enabled/disabled

  bool bSucceeded = false;
  if(pin >= 1 && pin <= NUM_PINS)
  {
    Pin& ioPin = _pins[pin - 1];
    changeBit(ioPin._reg_int_mask_p, ioPin._pin, enabled);
    
    bSucceeded = true;
  }
  
  return bSucceeded;
}

void IOExpander::pwmLoad(bool waitForLoad)
{
  //Load new period and duty registers into buffer
  unsigned long startTime = millis();
  setBit(REG_PWMCON0, 6);  //Set the "LOAD" bit of PWMCON0
  if(waitForLoad)
  {
    while(pwmLoading())
    {
      delay(1); //Wait for "LOAD" to complete
      if(millis() - startTime >= _timeout)
      {
        if(_debug)
          Serial.println("Timed out waiting for PWM load!");
        return;
      }
    }
  }
}

bool IOExpander::pwmLoading(void)
{
  return getBit(REG_PWMCON0, 6);
}

void IOExpander::pwmClear(bool waitForClear)
{
  //Clear the PWM counter
  unsigned long startTime = millis();
  setBit(REG_PWMCON0, 4);  //Set the "CLRPWM" bit of PWMCON0
  if(waitForClear)
  {
    while(pwmClearing())
    {
      delay(1); //Wait for "CLRPWM" to complete
      if(millis() - startTime >= _timeout)
      {
        if(_debug)
          Serial.println("Timed out waiting for PWM clear!");
        return;
      }
    }
  }
}

bool IOExpander::pwmClearing(void)
{
  return getBit(REG_PWMCON0, 4);
}

bool IOExpander::setPwmControl(uint8_t divider)
{
  //Set PWM settings.
  
  //PWM is driven by the 24MHz FSYS clock by default.
  
  //param divider: Clock divider, one of 1, 2, 4, 8, 16, 32, 64 or 128

  bool dividerGood = true;
  uint8_t pwmdiv2 = 0;
  switch(divider)
  {
    case 1:   pwmdiv2 = 0b000;    break;
    case 2:   pwmdiv2 = 0b001;    break;
    case 4:   pwmdiv2 = 0b010;    break;
    case 8:   pwmdiv2 = 0b011;    break;
    case 16:  pwmdiv2 = 0b100;    break;
    case 32:  pwmdiv2 = 0b101;    break;
    case 64:  pwmdiv2 = 0b110;    break;
    case 128: pwmdiv2 = 0b111;    break;

    default:
      if(_debug)
      {
        Serial.print("ValueError: A clock divider of ");
        Serial.println(divider);
      }
      dividerGood = false;
      break;
  }

  if(dividerGood)
  {
    //TODO: This currently sets GP, PWMTYP and FBINEN to 0
    //It might be desirable to make these available to the user
    //GP - Group mode enable (changes first three pairs of pAM to PWM01H and PWM01L)
    //PWMTYP - PWM type select: 0 edge-aligned, 1 center-aligned
    //FBINEN - Fault-break input enable

    i2cWrite8(REG_PWMCON1, pwmdiv2);
  }

  return dividerGood;
}

void IOExpander::setPwmPeriod(uint16_t value, bool load)
{
  //Set the PWM period.
   
  //The period is the point at which the PWM counter is reset to zero.
  //The PWM clock runs at FSYS with a divider of 1/1.
  //Also specifies the maximum value that can be set in the PWM duty cycle.

  value &= 0xffff;
  i2cWrite8(REG_PWMPL, (uint8_t)(value & 0xff));
  i2cWrite8(REG_PWMPH, (uint8_t)(value >> 8));

  if(load)
    pwmLoad();
}

uint8_t IOExpander::getMode(uint8_t pin)
{
  //Get the current mode of a pin.
  return _pins[pin - 1].getMode();
}

void IOExpander::setMode(uint8_t pin, uint8_t mode, bool schmittTrigger, bool invert)
{
  //Set a pin output mode.
  
  //param mode: one of the supplied IN, OUT, PWM or ADC constants

  if(pin < 1 || pin > NUM_PINS)
  {
    Serial.println("ValueError: Pin should be in range 1-14.");
    return;
  }

  Pin& ioPin = _pins[pin - 1];
  
  uint8_t gpioMode = mode & 0b11;
  uint8_t ioType = (mode >> 2) & 0b11;
  uint8_t initialState = mode >> 4;
  
  if(ioPin.getMode() == mode)
  {
    if(_debug)
    {
      Serial.print("Mode already is ");
      Serial.println(MODE_NAMES[ioType]);
    }
    return;
  }

  if((ioType != Pin::TYPE_IO) && !ioPin.modeSupported(mode))
  {
    if(_debug)
    {
      Serial.print("Pin ");
      Serial.print(pin);
      Serial.print(" does not support ");
      Serial.print(MODE_NAMES[ioType]);
      Serial.println("!");
    }
    return;
  }

  ioPin.setMode(mode);
  if(_debug)
  {
    Serial.print("Setting pin ");
    Serial.print(pin);
    Serial.print(" to mode ");
    Serial.print(MODE_NAMES[ioType]);
    Serial.print(" ");
    Serial.print(GPIO_NAMES[gpioMode]);
    Serial.print(", state: ");
    Serial.println(STATE_NAMES[initialState]);
  }

  if(mode == PIN_MODE_PWM)
  {
    setBit(ioPin._regIoPwm, ioPin._pwmChannel);
    changeBit(REG_PNP, ioPin._pwmChannel, invert);
    setBit(REG_PWMCON0, 7);  //Set PWMRUN bit
  }
  else
  {
    if(ioPin.getType() & Pin::TYPE_PWM)
      clrBit(ioPin._regIoPwm, ioPin._pwmChannel);
  }

  uint8_t pm1 = i2cRead8(ioPin._reg_m1);
  uint8_t pm2 = i2cRead8(ioPin._reg_m2);

  //Clear the pm1 and pm2 bits
  pm1 &= 255 - (1 << ioPin._pin);
  pm2 &= 255 - (1 << ioPin._pin);

  //Set the new pm1 and pm2 bits according to our gpio_mode
  pm1 |= (gpioMode >> 1) << ioPin._pin;
  pm2 |= (gpioMode & 0b1) << ioPin._pin;

  i2cWrite8(ioPin._reg_m1, pm1);
  i2cWrite8(ioPin._reg_m2, pm2);

  //Set up Schmitt trigger mode on inputs
  if(mode == PIN_MODE_PU || mode == PIN_MODE_IN)
    changeBit(ioPin._reg_ps, ioPin._pin, schmittTrigger);

  //5th bit of mode encodes default output pin state
  i2cWrite8(ioPin._reg_p, (initialState << 3) | ioPin._pin);
}

int16_t IOExpander::input(uint8_t pin, uint32_t adcTimeout)
{
  //Read the IO pin state.
  
  //Returns a 12-bit ADC reading if the pin is in ADC mode
  //Returns True/False if the pin is in any other input mode
  //Returns None if the pin is in PWM mode
  //:param adcTimeout: Timeout (in seconds) for an ADC read (default 1.0)

  if(pin < 1 || pin > NUM_PINS)
  {
    if(_debug)
      Serial.println("ValueError: Pin should be in range 1-14.");
    return -1;
  }

  Pin& ioPin = _pins[pin - 1];

  if(ioPin.getMode() == PIN_MODE_ADC)
  {
    if(_debug)
    {
      Serial.print("Reading ADC from pin ");
      Serial.println(pin);
    }
      
    clrBits(REG_ADCCON0, 0x0f);
    setBits(REG_ADCCON0, ioPin._adcChannel);
    i2cWrite8(REG_AINDIDS, 0);
    setBit(REG_AINDIDS, ioPin._adcChannel);
    setBit(REG_ADCCON1, 0);

    clrBit(REG_ADCCON0, 7);  //ADCF - Clear the conversion complete flag
    setBit(REG_ADCCON0, 6);  //ADCS - Set the ADC conversion start flag

    //Wait for the ADCF conversion complete flag to be set
    unsigned long startTime = millis();
    while(!getBit(REG_ADCCON0, 7))
    {
      delay(10);
      if(millis() - startTime >= adcTimeout)
      {
        if(_debug)
          Serial.println("Timeout waiting for ADC conversion!");
        return -1;
      }
    }

    uint8_t hi = i2cRead8(REG_ADCRH);
    uint8_t lo = i2cRead8(REG_ADCRL);
    return (uint16_t)(hi << 4) | (uint16_t)lo;
  }
  else
  {
    if(_debug)
    {
      Serial.print("Reading IO from pin ");
      Serial.println(pin);
    }
    
    uint8_t pv = getBit(ioPin._reg_p, ioPin._pin);
    return (pv) ? HIGH : LOW;
  }
}

float IOExpander::inputAsVoltage(uint8_t pin, uint32_t adcTimeout)
{
  //Read the IO pin state.
  
  //Returns a 12-bit ADC reading if the pin is in ADC mode
  //Returns True/False if the pin is in any other input mode
  //Returns None if the pin is in PWM mode
  //:param adcTimeout: Timeout (in seconds) for an ADC read (default 1.0)

  if(pin < 1 || pin > NUM_PINS)
  {
    if(_debug)
      Serial.println("ValueError: Pin should be in range 1-14.");
    return -1;
  }

  Pin& ioPin = _pins[pin - 1];

  if(ioPin.getMode() == PIN_MODE_ADC)
  {
    if(_debug)
    {
      Serial.print("Reading ADC from pin ");
      Serial.println(pin);
    }
      
    clrBits(REG_ADCCON0, 0x0f);
    setBits(REG_ADCCON0, ioPin._adcChannel);
    i2cWrite8(REG_AINDIDS, 0);
    setBit(REG_AINDIDS, ioPin._adcChannel);
    setBit(REG_ADCCON1, 0);

    clrBit(REG_ADCCON0, 7);  //ADCF - Clear the conversion complete flag
    setBit(REG_ADCCON0, 6);  //ADCS - Set the ADC conversion start flag

    //Wait for the ADCF conversion complete flag to be set
    unsigned long startTime = millis();
    while(!getBit(REG_ADCCON0, 7))
    {
      delay(1);
      if(millis() - startTime >= adcTimeout)
      {
        if(_debug)
          Serial.println("Timeout waiting for ADC conversion!");
        return -1;
      }
    }

    uint8_t hi = i2cRead8(REG_ADCRH);
    uint8_t lo = i2cRead8(REG_ADCRL);
    return ((float)((uint16_t)(hi << 4) | (uint16_t)lo) / 4095.0f) * _vref;
  }
  else
  {
    if(_debug)
    {
      Serial.print("Reading IO from pin ");
      Serial.println(pin);
    }
    
    uint8_t pv = getBit(ioPin._reg_p, ioPin._pin);
    return (pv) ? _vref : 0.0f;
  }
}

void IOExpander::output(uint8_t pin, uint16_t value, bool load)
{
  //Write an IO pin state or PWM duty cycle.
  
  //param value: Either True/False for OUT, or a number between 0 and PWM period for PWM.
  
  if(pin < 1 || pin > NUM_PINS)
  {
    Serial.println("Pin should be in range 1-14.");
    return;
  }

  Pin& ioPin = _pins[pin - 1];

  if(ioPin.getMode() == PIN_MODE_PWM)
  {
    if(_debug)
    {
      Serial.print("Outputting PWM to pin: ");
      Serial.println(pin);
    }

    i2cWrite8(ioPin._reg_pwml, (uint8_t)(value & 0xff));
    i2cWrite8(ioPin._reg_pwmh, (uint8_t)(value >> 8));
    if(load)
      pwmLoad();
  }
  else
  {
    if(value == LOW)
    {
      if(_debug)
      {
        Serial.print("Outputting LOW to pin: ");
        Serial.println(pin);
      }
      
      clrBit(ioPin._reg_p, ioPin._pin);
    }
    else if(value == HIGH)
    {
      if(_debug)
      {
        Serial.print("Outputting HIGH to pin: ");
        Serial.println(pin);
      }
      
      setBit(ioPin._reg_p, ioPin._pin);
    }
  }
}

void IOExpander::setupRotaryEncoder(uint8_t channel, uint8_t pinA, uint8_t pinB, uint8_t pinC, bool countMicrosteps)
{
  //Set up a rotary encoder.
  channel -= 1;
  setMode(pinA, PIN_MODE_PU, true);
  setMode(pinB, PIN_MODE_PU, true);

  if(pinC != 0)
  {
    setMode(pinC, PIN_MODE_OD);
    output(pinC, 0);
  }

  i2cWrite8(ENC_CFG[channel], pinA | (pinB << 4));
  changeBit(REG_ENC_EN, (channel * 2) + 1, countMicrosteps);
  setBit(REG_ENC_EN, channel * 2);
  
  //Reset internal encoder count to zero
  uint8_t reg = ENC_COUNT[channel];
  i2cWrite8(reg, 0x00);
}

int16_t IOExpander::readRotaryEncoder(uint8_t channel)
{
  //Read the step count from a rotary encoder."""
  channel -= 1;
  int16_t last = _encoderLast[channel];
  uint8_t reg = ENC_COUNT[channel];
  int16_t value = (int16_t)i2cRead8(reg);

  if(value & 0b10000000)
    value -= 256;

  if(last > 64 && value < -64)
    _encoderOffset[channel] += 256;
  if(last < -64 && value > 64)
    _encoderOffset[channel] -= 256;

  _encoderLast[channel] = value;

  return _encoderOffset[channel] + value;
}

uint8_t IOExpander::getBit(uint8_t reg, uint8_t bit)
{
  //Returns the specified bit (nth position from right) from a register
  return i2cRead8(reg) & (1 << bit);
}

void IOExpander::setBits(uint8_t reg, uint8_t bits)
{
  //Set the specified bits (using a mask) in a register.

  //Deal with special case registers first
  bool regInBitAddressedRegs = false;
  for(uint8_t i = 0; i < NUM_BIT_ADDRESSED_REGISTERS; i++)
  {
    if(BIT_ADDRESSED_REGS[i] == reg)
    {
      for(uint8_t bit = 0; bit < 8; bit++)
      {
        if(bits & (1 << bit))
          i2cWrite8(reg, 0b1000 | (bit & 0b111));
      }
      regInBitAddressedRegs = true;
      break;
    }
  }

  //Now deal with any other registers
  if(!regInBitAddressedRegs)
  {
    uint8_t value = i2cRead8(reg);
    delayMicroseconds(10);
    i2cWrite8(reg, value | bits);
  }
}

void IOExpander::setBit(uint8_t reg, uint8_t bit)
{
  //Set the specified bit (nth position from right) in a register.
  setBits(reg, (1 << bit));
}

void IOExpander::clrBits(uint8_t reg, uint8_t bits)
{
  //Clear the specified bits (using a mask) in a register.

  //Deal with special case registers first
  bool regInBitAddressedRegs = false;
  for(uint8_t i = 0; i < NUM_BIT_ADDRESSED_REGISTERS; i++)
  {
    if(BIT_ADDRESSED_REGS[i] == reg)
    {
      for(uint8_t bit = 0; bit < 8; bit++)
      {
        if(bits & (1 << bit))
          i2cWrite8(reg, 0b0000 | (bit & 0b111));
      }
      regInBitAddressedRegs = true;
      break;
    }
  }

  //Now deal with any other registers
  if(!regInBitAddressedRegs)
  {
    uint8_t value = i2cRead8(reg);
    delayMicroseconds(10);
    i2cWrite8(reg, value & ~bits);
  }
}

void IOExpander::clrBit(uint8_t reg, uint8_t bit)
{
  //Clear the specified bit (nth position from right) in a register.
  clrBits(reg, (1 << bit));
}

void IOExpander::changeBit(uint8_t reg, uint8_t bit, bool state)
{
  //Toggle one register bit on/off.
  if(state)
    setBit(reg, bit);
  else
    clrBit(reg, bit);
}

void IOExpander::waitForFlash(void)
{
  //Wait for the IOE to finish writing non-volatile memory.
  unsigned long startTime = millis();
  while(getInterruptFlag())
  {
    if(millis() - startTime > _timeout)
    {
      Serial.println("Timed out waiting for interrupt!");
      return;
    }
    delay(1);
  }

  startTime = millis();
  while(!getInterruptFlag())
  {
    if(millis() - startTime > _timeout)
    {
      Serial.println("Timed out waiting for interrupt!");
      return;
    }
    delay(1);
  }
}
